// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "mysql"
  url      = env("DATABASE_URL")
}

model User {
  id           Int            @id @default(autoincrement())
  name         String
  email        String         @unique
  password     String
  role         String
  transactions Transaction[]
}

model Menu {
  id               Int               @id @default(autoincrement())
  name             String
  description      String
  price            Float
  category         String
  detailTransakasi DetailTransaksi[]
}

model DetailTransaksi {
  id            Int         @id @default(autoincrement())
  transaction   Transaction @relation(fields: [transactionId], references: [id])
  transactionId Int
  menu          Menu        @relation(fields: [menuId], references: [id])
  menuId        Int
  quantity      Int
  unit_price    Float
  subtotal      Float
}

model Transaction {
  id                 Int               @id @default(autoincrement())
  user               User              @relation(fields: [userId], references: [id])
  userId             Int
  subtotal           Float
  tax                Float
  discount           Float
  total              Float
  payment_method     Float
  status             String
  pay_at             DateTime
  created_at         DateTime          @default(now())
  detailTransactions DetailTransaksi[]
}
